Fixed text align for benefits block

--- a/src/app/components/benefits/benefits.component.scss
+++ b/src/app/components/benefits/benefits.component.scss
@@ -107,6 +107,7 @@
 }
 
 .text-content {
+  margin: 0 auto;
   text-align: center;
   max-width: 580px;
 }
